# sql-table-qa

./: .gitignore  CONSTANTS.py  README.md  pyproject.toml
app/: app.py
configs/: env.example
data/: Chinook.db  evaluation_dataset.csv  unanswerable_dataset.csv
mlartifacts/287136887565225517/53ed27b5159c499cbf204507193b1f51/artifacts/: answers.json  eval_results_table.json
mlartifacts/287136887565225517/7f8a1494bccb4d16a491eefd7bcc543b/artifacts/: answers.json  eval_results_table.json
mlruns/0/: meta.yaml
mlruns/287136887565225517/: meta.yaml
mlruns/287136887565225517/53ed27b5159c499cbf204507193b1f51/: meta.yaml
mlruns/287136887565225517/53ed27b5159c499cbf204507193b1f51/tags/: mlflow.runName
mlruns/287136887565225517/7f8a1494bccb4d16a491eefd7bcc543b/: meta.yaml
mlruns/287136887565225517/7f8a1494bccb4d16a491eefd7bcc543b/tags/: mlflow.loggedArtifacts  mlflow.runName  mlflow.source.name
mlruns/287136887565225517/datasets/4b0191ab7c2d2b9d62042a18590d81e8/: meta.yaml
mlruns/287136887565225517/datasets/b34a2948d143e15a627d32d85708b986/: meta.yaml
notebooks/: eval-set-queries.ipynb  experiment-griptape-agent.ipynb  experiment-naive-langchain-prod.ipynb  experiment-naive-langchain-qa.ipynb  load-data.ipynb  test-basic-functionalities.ipynb
sql_table_qa/: setup.py
sql_table_qa/answerers/langchain_answerer/: langchain_naive_answerer.py  langchain_sql_connector.py
sql_table_qa/answerers/openai_answerer/: openai_answerer.py
sql_table_qa/dbutils/: database_connector.py
sql_table_qa/evaluators/: llm_evaluators.py
(+16 files in other folders)
