[tool.poetry]
name = "sql-table-qa"
version = "2.0.0"
description = "Small project to answer questions on Chinook DB dataset using SQL and LLM"
authors = ["Phillip Nguyen <nh273@cornell.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
mlflow = "^2.12.1"
openai = "^1.23.6"
python-dotenv = "^1.0.1"
jupyterlab = "^4.1.8"
langchain = "^0.1.16"
langchain-core = "^0.1.46"
langchain-openai = "^0.1.4"
pandas = "^2.2.2"
sqlglot = "^23.12.1"
sqlparse = "^0.5.0"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
